--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "Yihsuan",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "request": "^2.88.2"
