--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yihsuan",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
